<resources>
    <string name="app_name">Account Book</string>
    <string name="all_member">All Member</string>
    <string name="add_new_member">Add New Member</string>
    <string name="dashboard">Dashboard</string>
    <string name="remove_member">Remove Member</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="blank">Blank</string>
    <string name="member_name">Member Name</string>
    <string name="member_address">Member Address</string>
    <string name="security">Security</string>
    <string name="monthly">Monthly</string>
    <string name="phone_number">Phone Number</string>
    <string name="shop_location">Shop Location</string>

</resources>
