<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertMemberDetails">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="240dp">
            <ImageView
                android:id="@+id/insert_member_details_shop_pic_imageview"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/poly_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/insert_member_details_profile_imageview"
                android:src="@drawable/error_picture"
                android:layout_width="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="100dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/insert_member_details_person_name_edittext"
                    android:hint="@string/member_name"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/black"
                    android:textColorHint="@android:color/white"
                    android:shadowRadius="3"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/address"
                        android:layout_width="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="30dp" />
                    <EditText
                        android:hint="@string/member_address"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:id="@+id/insert_member_details_member_address_edittext"
                        android:layout_gravity="center"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:padding="10dp"
            android:text="10/12/1999"
            android:id="@+id/insert_member_details_date_textview"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:shadowRadius="3"
            android:layout_gravity="top|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:layout_width="300dp"
        android:layout_height="100dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:text="Security"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/insert_member_details_security_edittext"
                    android:paddingTop="5dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorHint"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:hint="@string/security"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:text="Monthly"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:paddingTop="5dp"
                    android:textColor="@color/textColor"
                    android:id="@+id/insert_member_details_monthly_payment_edittext"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:hint="@string/monthly"
                    android:textColorHint="@color/textColorHint"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        >
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/phone"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <EditText
                    android:hint="@string/phone_number"
                    android:paddingLeft="20dp"
                    android:id="@+id/insert_member_details_phone_number_edittext"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:inputType="phone"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="Shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/address"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <EditText
                        android:hint="@string/shop_location"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:inputType="textImeMultiLine"
                        android:id="@+id/insert_member_details_shop_address_edittext"
                        android:layout_gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/insert_member_details_done_bar_button"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        style="?android:attr/buttonBarButtonStyle"
        android:text="Done"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>